--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jaya Chandra - Résumé</title>
+    <title>Jaya Chandra | Techy</title>
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -49,11 +51,13 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#hire">Want to hire me?</a>
           </li>
         </ul>
       </div>
@@ -69,24 +73,7 @@
           <div class="subheading mb-5">Bangalore, Karnataka, India - 562106  · (+91) 8147265056 ·
             <a href="mailto:jayachandraoggy@gmail.com">jayachandraoggy@gmail.com</a>
           </div>
-          <a class="lead mb-5">A tech geek who loves to code, learn new technologies related to software development. Currently working as a Magento developer at <a href="https://www.codilar.com/">Codilar Technologies</a>, Bangalore</p>
-          <div class="social-icons">
-            <a href="https://api.whatsapp.com/send?phone=918147265056&text=Hi, I contacted you through your website.">
-              <i class="fab fa-whatsapp"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/jaya-chandravannalu">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://github.com/jayachandraoggy">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.instagram.com/jay_5056/">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/jaya.chandra.35912672">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </div>
+          <p class="lead mb-5">A tech geek who loves to code, learn new technologies related to software development. Currently working as a Magento developer at <a href="https://www.codilar.com/">Codilar Technologies</a>, Bangalore.</p>
         </div>
       </section>
 
@@ -115,7 +102,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Education<i class="fas fa-graduation-cap"></i></h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -186,43 +173,22 @@
               <i class="fab fa-node"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-react"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="fab fa-npm"></i>
             </li>
           </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+          <div class="subheading mb-3">Frameworks & Libraries</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-magento"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+        </ul>
         </div>
       </section>
 
-      <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-        </div>
-      </section>
 
       <hr class="m-0">
 
@@ -232,33 +198,43 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
               2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+              Place - STJBIT - Coding event, Tech Fest 2k17</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
+              Place - GM Institute of Technology - Coding event, DELTA 2K16</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Place - GM Institute of Technology - Dynamic Music Collage, Mallika 2K16</li>
           </ul>
         </div>
       </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="hire">
+      <div class="my-auto">
+
+        <h4>Reach me on</h4>
+        <div class="social-icons">
+          <a href="https://api.whatsapp.com/send?phone=918147265056&text=Hi, I contacted you through your website.">
+            <i class="fab fa-whatsapp"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/jaya-chandravannalu">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/jayachandraoggy">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instagram.com/jay_5056/">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.facebook.com/jaya.chandra.35912672">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </section>
 
     </div>
 
