Find me on update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#hire">Want to hire me?</a>
+            <a class="nav-link js-scroll-trigger" href="#hire">Find me on<i class="far fa-smile"></i></a>
           </li>
         </ul>
       </div>
@@ -215,7 +215,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="hire">
       <div class="my-auto">
 
-        <h4>Reach me on</h4>
+        <h4>Find me on<i class="far fa-smile"></i></h4>
         <div class="social-icons">
           <a href="https://api.whatsapp.com/send?phone=918147265056&text=Hi, I contacted you through your website.">
             <i class="fab fa-whatsapp"></i>
