--- a/PWA/index.html
+++ b/PWA/index.html
@@ -117,7 +117,7 @@
       </svg>
     </div>
 
-    <script src="/scripts/app.js"></script>
-    <script src="/scripts/localforage-1.4.0.js"></script>
+    <script src="/PWA/scripts/app.js"></script>
+    <script src="/PWA/scripts/localforage-1.4.0.js"></script>
   </body>
 </html>
