--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
+    <meta name="google-site-verification" content="qUFBfNRxvdz0PkRzwpGhQRllXvnPR-3IgjXPJzryKjo" />
+
   </head>
 
   <body id="page-top">
