--- a/index.html
+++ b/index.html
@@ -87,12 +87,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Magento Developer</h3>
+              <h3 class="mb-0">Tech Lead</h3>
               <div class="subheading mb-3">Codilar Technologies</div>
-              <p>Actively working as a Magento developer and developed extension modules for Magento e-Commerce software platform. </p>
+              <p>Actively working to build high quality e-commerce softwares along with team and providing the best tech solutions for the client requirements. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2018 - Present</span>
+              <span class="text-primary">June 2021 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Magento Developer</h3>
+              <div class="subheading mb-3">Codilar Technologies</div>
+              <p>Worked as a Magento developer and developed extension modules for Magento e-Commerce software platform. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2018 - May 2021</span>
             </div>
           </div>
 
