--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="subheading mb-5">Bangalore, Karnataka, India - 562106  · (+91) 8147265056 ·
             <a href="mailto:jayachandraoggy@gmail.com">jayachandraoggy@gmail.com</a>
           </div>
-          <p class="lead mb-5">A tech geek who loves to code, learn new technologies related to software development. Currently working as a Magento developer at <a href="https://www.codilar.com/">Codilar Technologies</a>, Bangalore.</p>
+          <p class="lead mb-5">A tech geek who loves to code, learn new technologies related to software development. Currently working as a Senior Magento developer at <a href="https://www.tebio.in/">Tebio Private Limited</a>, Bangalore.</p>
         </div>
       </section>
 
@@ -87,12 +87,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Senior Magento Developer</h3>
+              <div class="subheading mb-3">Tebio Private Limited</div>
+              <p>Working as a Senior Magento developer leading a team, gathering requirements, designing and implementing the critical CR's. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Feb 2022 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Tech Lead</h3>
               <div class="subheading mb-3">Codilar Technologies</div>
               <p>Actively working to build high quality e-commerce softwares along with team and providing the best tech solutions for the client requirements. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2021 - Present</span>
+              <span class="text-primary">June 2021 - Jan 2022</span>
             </div>
           </div>
 
@@ -153,6 +164,9 @@
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-linux"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-apple"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-windows"></i>
