experience and other updates

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
           <h1 class="mb-0">Jaya
             <span class="text-primary">Chandra</span>
           </h1>
-          <div class="subheading mb-5">Bangalore, Karnataka, India - 562106  · (+91) 8147265056 ·
+          <div class="subheading mb-5">Bangalore, Karnataka, India - 562106  · <a href="tel:+918147265056">(+91) 8147265056</a> ·
             <a href="mailto:jayachandraoggy@gmail.com">jayachandraoggy@gmail.com</a>
           </div>
-          <p class="lead mb-5">A tech geek who loves to code, learn new technologies related to software development. Currently working as a Senior Magento developer at <a href="https://www.tebio.in/">Tebio Private Limited</a>, Bangalore.</p>
+          
+          <p class="lead mb-5">A tech geek who is fond of Computer programming, learn new technologies related to software development. Currently working as a <b>Senior Magento developer</b> to <a href="http://doulton.com/">Doulton Water Filters (UK)</a>, remotely from Bangalore, India.</p>
         </div>
       </section>
 
@@ -88,11 +89,22 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Senior Magento Developer</h3>
+              <div class="subheading mb-3">Doulton Water Filters</div>
+              <p>Working as a Senior Magento developer gathering requirements, assisting team, implementing new features and websites, maintaining projects code and database. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2022 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Senior Magento Developer</h3>
               <div class="subheading mb-3">Tebio Private Limited</div>
               <p>Working as a Senior Magento developer leading a team, gathering requirements, designing and implementing the critical CR's. </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Feb 2022 - Present</span>
+              <span class="text-primary">Feb 2022 - June 2022</span>
             </div>
           </div>
 
